--- a/Zaikaa/food/templates/bookings.html
+++ b/Zaikaa/food/templates/bookings.html
@@ -16,11 +16,11 @@
         <thead>
             <tr>
                 <th>Token ID</th>
-                <th>Order ID</th>
+                <!-- <th>Order ID</th> -->
                 <th>Item Name</th>
                 <th>Quantity</th>
                 <th>Customer Name</th>
-                <th>Contact No</th>
+                <!-- <th>Contact No</th> -->
                 <th>Order Date & Time</th>
                 <th>Actions</th>
             </tr>
@@ -29,11 +29,11 @@
             {% for order in orders %}
                 <tr>
                     <td>{{ order.0 }}</td>
-                    <td>{{ order.1 }}</td>
+                    <!-- <td>{{ order.1 }}</td> -->
                     <td>{{ order.2 }}</td>
                     <td>{{ order.3 }}</td>
                     <td>{{ order.4 }}</td>
-                    <td>{{ order.5 }}</td>
+                    <!-- <td>{{ order.5 }}</td> -->
                     <td>{% if order.7 %}{{ order.7|date:"D M d, Y H:i" }}{% else %}No Timestamp{% endif %}</td>
                     <td>
                         <div class="actions">
